# YoloOCLInference

./: CMakeLists.txt  README.md
data/: coco.names  tiny-yolo.cfg
project/: YoloOCLInference.sln  YoloOCLInference.vcxproj  YoloOCLInference.vcxproj.filters  project2.licenseheader
src/: YoloOCLMain.cpp
src/Kernels/: DeepNNFP16.cl  DeepNNFP32.cl
src/OpenCL/: OCLManager.cpp  buffer.cpp  cl_wrapper.cpp  clutils.cpp  helpers.cpp  image2D.cpp  iv_common.cpp  kernel_launcher.cpp  oclUtils.cpp  program.cpp  sampler.cpp  shrUtils.cpp
src/OpenCL/include/: OCLManager.h  cl_wrapper.hpp
src/Utilities/: InitUtils.cpp
src/Utilities/include/: GlobalDefines.h  InitUtils.h
src/VideoProcessing/: YoloOCLDNN.cpp
src/VideoProcessing/include/: YoloOCLDNN.h
